--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 </div>
 
 <footer class="my-5 pt-5 text-muted text-center text-small">
-  <p class="mb-1">created by @arstagaev</p>
+  <p class="mb-1">created by @azim & @arstagaev</p>
   <ul class="list-inline">inspired by the work of the following:
     <li class="list-inline-item"><a href="http://blogs.nrvnqsr.com/entry.php/3309-How-is-damage-calculated">Kyte</a></li>
     <li class="list-inline-item"><a href="https://fgo.boyakin.net/fgocalc">Boyakin</a></li>
