--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body class="bg-light"text="black">
 
 <div class="w3-container">
-  <h2>Калькулятор Азима для Фрезы
+  <h2>Калькулятор для Фрезы
     <img src="./img/fou.png" hspace="3" width="50"></img>
   </h2>
 </div>
@@ -360,7 +360,7 @@
         </div>-->
 
         <hr class="mb-4">
-        <button type="submit" class="btn btn-primary btn-lg">Calculate</button>
+        <button type="submit" class="btn btn-primary btn-lg" onclick="to2tab()">Calculate</button>
         <button type="reset" class="btn btn-secondary btn-lg">Reset</button>
       </form>
     </div>
